--- a/pom.xml
+++ b/pom.xml
@@ -132,14 +132,15 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-server</artifactId>
+            <version>2.6.3</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.activemq/artemis-jms-server -->
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>artemis-jms-server</artifactId>
-            <version>2.28.0</version>
-        </dependency>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.activemq/artemis-jms-server &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.activemq</groupId>-->
+<!--            <artifactId>artemis-jms-server</artifactId>-->
+<!--            <version>2.28.0</version>-->
+<!--        </dependency>-->
 
 
     </dependencies>
