--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -24,7 +24,7 @@ logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.artemis.mode=embedded
-spring.artemis.host=192.168.1.210
-spring.artemis.port=9876
+#spring.artemis.host=192.168.1.210
+#spring.artemis.port=9876
 spring.artemis.user=admin
 spring.artemis.password=secret
