--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,15 @@
             <version>2.6.3</version>
         </dependency>
 
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.activemq/artemis-jms-server &ndash;&gt;-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.1.5.RELEASE</version>
+        </dependency>
+
+
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.activemq/artemis-jms-server &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.apache.activemq</groupId>-->
 <!--            <artifactId>artemis-jms-server</artifactId>-->
